--- a/Source/Client/Web/flightBooking/index.html
+++ b/Source/Client/Web/flightBooking/index.html
@@ -15,112 +15,239 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <!--         <link type="text/css" rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css"> -->
     <!-- <script src="animation.js" type="text/javascript" charset="utf-8" async defer></script> -->
-
-    <script src="js/animation.js" type="text/javascript" charset="utf-8" async defer></script>
-
+    <script src="js/animation.js" type="text/javascript"></script>
+    <link href="datepicker/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="datepicker/css/datepicker.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.5/validator.min.js"></script>
 </head>
 
-<body>
-    <div class="container" id="wrapper">
-    <!--<div class="container" id="wrapper" ng-app="myApp" ng-controller="myCtrl">-->
-        <section class="bookyourtrip">
-            <article>
-                <div>
-                    <ul class="nav naviga-blue">
-                        <li class="active">
-                            <a>Khứ hồi</a>
-                        </li>
-                        <li class>
-                            <a>Một chiều</a>
-                        </li>
+<body ng-app="myApp">
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ITUS Airlane</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="./index.html">Home</a></li>
+                        <!--             <li><a href="#about">About</a></li> -->
                     </ul>
+                    <!--           <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Username</a></li>
+              </ul> -->
                 </div>
-                <div class="bookyourtrip-location-wapper">
-                    <div class="location-picker">
-                        <div class="location-picker-title">
-                            <i class="fa fa-plane" aria-hidden="true"></i>
-                            <span>&nbsp;&nbsp;Từ</span>
-                        </div>
-                        <select class="input-default input-selection-box">
-                            <option>Hồ Chí Minh</option>
-                            <option>Hà Nội</option>
-                            <option>Đà Lạt</option>
-                            <option>Phú Quốc</option>
-                        </select>
-                    </div>
-                    <div class="location-picker" style="width: 50px;"><span class="btn-horizontal icon-roundtrip"></span></div>
-                    <div class="location-picker" >
-                        <div class="location-picker-title">
-                            <i class="fa fa-plane" aria-hidden="true"></i>
-                            <span>&nbsp;&nbsp;Đến</span>
-                        </div>
-                        <select class="input-default input-selection-box">
-                            <option>Hồ Chí Minh</option>
-                            <option>Hà Nội</option>
-                            <option>Đà Lạt</option>
-                            <option>Phú Quốc</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="bookyourtrip-datepicker-wrapper">
-                    <div class="date-picker">
-                        <div class="datepicker-title">
-                            <!-- <input type="text" name="" class="input-default" placeholder="Ngày đi"> -->
-                            <input type="text" id="depDate" name="depDate" class="flight-date hasDatepicker input-default" placeholder="Ngày đi"">
-                            <a class="fa fa-calendar" aria-hidden="true"></a>
-                        </div>
-                    </div>
-                    <div class="date-picker">
-                        <div class="datepicker-title form-group">
-                            <!-- <input type="text" name="" class="input-default" placeholder="Ngày về"> -->
-                            <input type="text" id="depDate" name="depDate" class="flight-date hasDatepicker input-default" placeholder="Ngày về"">
-                            <a class="fa fa-calendar" aria-hidden="true"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="bookyourtrip-guestqualitity-wrapper">
-                    <label class="inline-label">&nbsp;&nbsp;Người lớn
-                        <select class="people-selection-box">
-                            <option selected>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                        </select>
-                    </label>
-                    <label class="inline-label">&nbsp;&nbsp;Trẻ em
-                        <select class="people-selection-box">
-                            <option selected>0</option>
-                            <option>1</option>
-                            <option>2</option>
-                        </select>
-                    </label>
-                    <label class="inline-label">&nbsp;&nbsp;Loại vé
-                        <select class="ticket-selection-box">
-                            <option selected>Y</option>
-                            <option>C</option>
-                        </select>
-                    </label>
-                </div>
-                <div style="text-align: center;">
-<!--                         <input  style="width: 200px; height:30px" type="submit" value="Tìm chuyến bay" id="submit"> -->
-                    <button style="text-transform: uppercase;" type="submit" class="btn btn-primary">
-                        <i class="fa fa-search" aria-hidden="true"></i> Tìm chuyến bay</button>
-                </div>
-            </form>
-        </article>
-    </section>
-    <!--<script>
-        var app = angular.module('myApp', []);
-        app.controller('myCtrl', function($scope) {
-            $scope.isOneway = false;
-            $scope.test = function(value) {
-                $scope.isOneway = value;
-            }
-        });
-        </script> -->
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+<!--         <div class="wide">
+        <div class="col-xs-5 line"><hr></div>
+        <div class="col-xs-2 logo">Logo</div>
+        <div class="col-xs-5 line"><hr></div> 
+        </div>-->
+    </header>
+    <!-- /header -->
 
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
+    <div class="container" ng-controller="mainSearchCtrl"> <!--id="wrapper"-->
+        <div class="panel panel-primary" style="max-width:750px;margin:0px auto">
+            <div class="panel-heading">Book Ticket Flight</div>
+            <div class="panel-body">
+                <form class="form-horizontal" action="page2.html" >
+                    <div class="row" style="margin-bottom: 30px; margin-left: 5px;">
+                        <ul class="nav naviga-blue">
+                            <li ng-click="test(true)" class="{{isRoundtrip ? 'active' : ''}}">
+                                <a>Khứ hồi</a>
+                            </li>
+                            <li ng-click="test(false)" class="{{!isRoundtrip ? 'active' : ''}}">
+                                <a>Một chiều</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row" style="margin-bottom: 30px; margin-left: 5px;">
+                        <div class="form-group col-sm-5">
+                            <div class="input-group col-sm-12 ">
+                                <span style="width:100px;" class="input-group-addon"><i class="fa fa-plane" aria-hidden="true"></i> Khởi hành </span>
+                                <select id="depart_airport" class="form-control" 
+                                ng-options="airport as airport.name + ' - ' + airport.id for airport in depart_airports"
+                                ng-model="depart_item" ng-change="getArriveAirports(depart_item.id)"></select>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <span class="btn-horizontal {{isRoundtrip ? 'icon-roundtrip' : 'icon-oneway'}}"></span>
+                        </div>
+                        <div class="form-group col-sm-5">
+                            <div class="input-group col-sm-12 ">
+                                <span style="width:100px;" class="input-group-addon"><i class="fa fa-plane" aria-hidden="true"></i> Điểm đến </span>
+                                <select id="arrive_airport" class="form-control"
+                            ng-options="airport as airport.name + ' - ' + airport.id for airport in arrive_airports"
+                            ng-model="arrive_item"></select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-bottom: 20px; margin-left: 5px;">
+                        <div class="form-group col-sm-5">
+                            <div class="input-group">
+                                <span style="width:100px;" class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i> Ngày về </span>
+                                <input type="text" id="timeCheckIn" class="form-control input-default" placeholder="" data-error="Vui lòng chọn ngày về!" required>
+                            </div>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                        <div class="col-sm-1">
+                        </div>
+                        <div class="form-group col-sm-5 {{isRoundtrip ? '' : 'datepicker-checkout'}}">
+                            <div class="input-group">
+                                <span style="width:100px;" class="input-group-addon"><i class="fa fa-calendar" aria-hidden="true"></i> Ngày về </span>
+                                <input type="text" id="timeCheckOut" class="form-control input-default" placeholder="" data-error="Vui lòng chọn ngày về!" required="{{isRoundtrip}}">
+                            </div>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-bottom: 20px; margin-left: 5px;">
+                        <div class="col-sm-offset-2 col-sm-3">
+                            <label>Người lớn
+                                <select id="adult" class="form-control" ng-model="numAdult" style="width:80px;">
+                                    <option ng-value="1" ng-selected="true">1</option>
+                                    <option ng-value="2">2</option>
+                                    <option ng-value="3">3</option>
+                                    <option ng-value="4">4</option>
+                                    <option ng-value="5">5</option>
+                                    <option ng-value="6">6</option>
+                                </select>
+                            </label>
+                        </div>
+                        <div class="col-sm-offset-2 col-sm-3">
+                            <label>Trẻ em
+                                <select id="child" class="form-control" style="width:80px;">
+                                    <option ng-repeat="option in getNumKids(numAdult)">{{option}}
+                                    </option>
+                                </select>
+                            </label>
+                        </div>
+                    </div>
+                    <div style="text-align: center;">
+                            <input type="hidden" name="tu" value="{{ depart }}" /> 
+                            <input type="hidden" name="den" value="{{ arrive }}" /> 
+                            <input type="hidden" name="ngay" value="{{ date }}" /> 
+                            <input type="hidden" name="ngayve" value="{{ returndate }}" />    
+                            <input type="hidden" name="nguoilon" value="{{ adult }}" /> 
+                            <input type="hidden" name="treem" value="{{ child }}" />    
+                            <button style="text-transform: uppercase;" type="submit" class="btn btn-primary" ng-click="findFlight()"> 
+                                <i class="fa fa-search" aria-hidden="true"></i> Tìm chuyến bay</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h3><span>ITUS</span>Airlane</h3>
+            <p class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+            </p>
+            <p class="footer-company-name">Company Name &copy; 2016</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>207 Nguyen Van Cu Street</span> District 5, Ho chi Minh City</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+84 1685 144 667</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:leduci1595@gmail.com">leduci1595@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>The best company ever
+            </p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script>
+    var app = angular.module('myApp', []);
+    app.controller('mainSearchCtrl', function($scope, $http) {
+        $scope.isRoundtrip = true;
+        $scope.numAdult = 1;
+        $scope.numKids = [];
+
+        $http({
+            method : 'GET',
+            url : 'http://flightbooking01.mycloud.by/api/flights/depart_airports'
+        }).then(function successCallback(response) {
+            $scope.depart_airports = response.data.airports;
+        }, function errorCallback(response) {
+            alert(response.status);
+        });
+
+
+        $scope.test = function(value) {
+            $scope.isRoundtrip = value;
+
+        };
+        $scope.getNumKids = function(value) {
+            $scope.numKids.length = 0;
+            for (var i = 0; i <= $scope.numAdult * 2; i++) {
+                $scope.numKids.push(i);
+            }
+            return $scope.numKids;
+        };
+
+        $scope.getArriveAirports = function(depart) {
+            $http({
+                method : 'GET',
+                url : 'http://flightbooking01.mycloud.by/api/flights/arrive_airports/' + depart
+            }).then(function successCallback(response) {
+                $scope.arrive_airports = response.data.airports;
+            }, function errorCallback(response) {
+                alert(response.status);
+            });
+        }
+
+        $scope.findFlight = function() {
+            var startdate = document.getElementById('timeCheckIn').value;
+            var d = startdate.split("/");
+            startdate = new Date(d[2],(d[0] - 1),d[1],0,0,0);
+            $scope.date = startdate.getTime();
+            $scope.returndate = '#'
+            if ($scope.isRoundtrip) {
+                var returndate = document.getElementById('timeCheckOut').value;
+                var d = returndate.split("/");
+                returndate = new Date(d[2],(d[0] - 1),d[1],0,0,0);
+                $scope.returndate = returndate.getTime();
+            }
+
+            var e = document.getElementById("adult");
+            $scope.adult = e.options[e.selectedIndex].text;
+            e = document.getElementById("child");
+            $scope.child = e.options[e.selectedIndex].text;
+            e = document.getElementById("depart_airport");
+            $scope.depart = e.options[e.selectedIndex].text;
+            e = document.getElementById("arrive_airport");
+            $scope.arrive = e.options[e.selectedIndex].text;
+        }
+    });
+    </script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="datepicker/js/jquery.min.js"></script>
+    <script src="datepicker/js/bootstrap.min.js"></script>
+    <script src="datepicker/js/bootstrap-datepicker.js"></script>
 </body>
 
 </html>
