--- a/Source/Client/Web/flightBooking/page2.html
+++ b/Source/Client/Web/flightBooking/page2.html
@@ -21,170 +21,315 @@
 </head>
 
 <body>
-    <div class="container" ng-app="bookFlightTicket" ng-controller="validateCtrl"  ng-submit="submit()">
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ITUS Airlane</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="./index.html">Home</a></li>
+                        <!--             <li><a href="#about">About</a></li> -->
+                    </ul>
+                    <!--           <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Username</a></li>
+              </ul> -->
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </header>
+    <!-- /header -->
+    <div id="wrap" class="container" ng-app="bookFlightTicket" ng-controller="validateCtrl" ng-submit="submit()">
         <div class="table-reponsive">
             <div class="dapartureFlightOptions">
                 <div class="infoflight">
-                    <p>Departure Flight Options</p>
-                    <span class="label label-danger" style="margin-right:50px;">Flying From Dalat(DLI) </span>
-                    <span class="label label-danger">Flying To Hanoi(HAN)</span>
+                    <h4 class="head-title1"> CHUYẾN BAY CHIỀU ĐI</h4>
+                    <span class="label label-danger" style="margin-right:50px;">{{ Params.depart }} </span>
+                    <span class="label label-danger">{{ Params.arrive }}</span>
                 </div>
                 <table class="table table-condensed table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>Flight</th>
-                            <th>Depart</th>
-                            <th>Type Flight</th>
-                            <th>Ticket Y</th>
-                            <th>Ticket C</th>
+                            <th>Mã</th>
+                            <th>Thời gian đi</th>
+                            <th>Loại máy bay</th>
+                            <th>Hạng</th>
+                            <th>Giá vé</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="infoticket">
-                            <td>VN100</td>
-                            <td>12:20</td>
+                        <tr class="infoticket" ng-repeat="flight in Depart_flights track by $index">
+                            <td>{{ flight.flightId }}</td>
+                            <td>{{ flight.time }}</td>
                             <td>
-                                <span>200</span>
-                                <span>seats</span>
+                                <span>{{ flight.number }}</span>
+                                <span>ghế</span>
                             </td>
+                            <td>{{ flight.grade }}</td>
                             <td>
-                                <input type="radio" name="chooseTicketA" ng-model="ticket1.price" value="3200000">
-                                <span>3.200.000</span>
-                                <span>VND</span>
-                            </td>
-                            <td>
-                                <input type="radio" name="chooseTicketA" ng-model="ticket1.price" value="2800000">
-                                <span>2.800.000</span>
-                                <span>VND</span>
-                            </td>
-                        </tr>
-                        <tr class="infoticket">
-                            <td>VN103</td>
-                            <td>16:00</td>
-                            <td>
-                                <span>100</span>
-                                <span>seats</span>
-                            </td>
-                            <td>
-                                <input type="radio" name="chooseTicketA" ng-model="ticket1.price" value="5300000">
-                                <span>5.300.000</span>
-                                <span>VND</span>
-                            </td>
-                            <td>
-                                <input type="radio" name="chooseTicketA" ng-model="ticket1.price" value="3800000">
-                                <span>3.800.000</span>
+                                <input type="radio" name="chooseTicketA" ng-model="ticket1.price" ng-checked="$index==0?true:false" value="{{ $index }}" ng-click="setFlight()">
+                                <span>{{ flight.price }}</span>
                                 <span>VND</span>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-
-            <div class="ReturnFlightOptions">
-              <div class="infoflight">
-                  <p>Return Flight Options</p>
-                  <span class="label label-danger" style="margin-right:50px;">Flying From Hanoi(HAN)</span>
-                  <span class="label label-danger">Flying To Dalat(DLI)</span>
-              </div>
-              <table class="table table-condensed table-striped table-hover">
-                  <thead>
-                      <tr>
-                          <th>Flight</th>
-                          <th>Depart</th>
-                          <th>Type Flight</th>
-                          <th>Ticket Y</th>
-                          <th>Ticket C</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr class="infoticket">
-                          <td>VN100</td>
-                          <td>12:20</td>
-                          <td>
-                              <span>200</span>
-                              <span>seats</span>
-                          </td>
-                          <td>
-                              <input type="radio" name="chooseTicketB" ng-model="ticket2.price" value="3200000">
-                              <span>3.200.000</span>
-                              <span>VND</span>
-                          </td>
-                          <td>
-                              <input type="radio" name="chooseTicketB" ng-model="ticket2.price" value="2800000">
-                              <span>2.800.000</span>
-                              <span>VND</span>
-                          </td>
-                      </tr>
-                      <tr class="infoticket">
-                          <td>VN103</td>
-                          <td>16:00</td>
-                          <td>
-                              <span>100</span>
-                              <span>seats</span>
-                          </td>
-                          <td>
-                              <input type="radio" name="chooseTicketB" ng-model="ticket2.price" value="5300000">
-                              <span>5.300.000</span>
-                              <span>VND</span>
-                          </td>
-                          <td>
-                              <input type="radio" name="chooseTicketB" ng-model="ticket2.price" value="3800000">
-                              <span>3.800.000</span>
-                              <span>VND</span>
-                          </td>
-                      </tr>
-                  </tbody>
-              </table>
+            <div class="ReturnFlightOptions" style="visibility: {{$scope.Params.returndate != '#' ? 'visible' : 'hidden'}}">
+                <div class="infoflight">
+                    <h4 class="head-title1">CHUYẾN BAY CHIỀU VỀ</h4>
+                    <span class="label label-danger" style="margin-right:50px;">{{ Params.arrive }}</span>
+                    <span class="label label-danger">{{ Params.depart }}</span>
+                </div>
+                <table class="table table-condensed table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>Mã</th>
+                            <th>Thời gian đi</th>
+                            <th>Loại máy bay</th>
+                            <th>Hạng</th>
+                            <th>Giá vé</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="infoticket" ng-repeat="flight in Arrive_flights track by $index">
+                            <td>{{ flight.flightId }}</td>
+                            <td>{{ flight.time }}</td>
+                            <td>
+                                <span>{{ flight.number }}</span>
+                                <span>ghế</span>
+                            </td>
+                            <td>{{ flight.grade }}</td>
+                            <td>
+                                <input type="radio" name="chooseTicketB" ng-model="ticket2.price" ng-checked="$index==0?true:false" value="{{ $index }}" ng-click="setFlight()">
+                                <span>{{ flight.price }}</span>
+                                <span>VND</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-3 col-sm-5" style="text-align:center;">
-                <button style="width:100px;" type="submit" class="btn btn-primary">
+                <button style="width:100px;" type="submit" class="btn btn-primary" ng-click="addFlight()">
                     <i class="fa fa-hand-o-right" aria-hidden="true"></i> Continue</button>
             </div>
         </div>
     </div>
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h3><span>ITUS</span>Airlane</h3>
+            <p class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+            </p>
+            <p class="footer-company-name">Company Name &copy; 2016</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>207 Nguyen Van Cu Street</span> District 5, Ho chi Minh City</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+84 1685 144 667</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:leduci1595@gmail.com">leduci1595@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>The best company ever
+            </p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-
     <script type="text/javascript">
     var app = angular.module('bookFlightTicket', []);
-    app.controller('validateCtrl', ['$scope', function($scope) {
+    app.controller('validateCtrl', function($scope, $http, $window) {
         $scope.ticket2 = {
-          fightid :'',
-          type : '',
-          price: ''
+            fightid: '',
+            type: '',
+            price: ''
         };
         $scope.ticket1 = {
-          fightid : '',
-          type : '',
-          price: ''
+            fightid: '',
+            type: '',
+            price: ''
         };
         $scope.listicket = [];
 
-        $scope.submit = function() {
-          $window.alert("Vui lòng chọn vé đi và vé về!");
-          if ($scope.ticket1.price && $scope.ticket2.price) {
-            $scope.list.push(this.ticket1);
-            $scope.list.push(this.ticket2);
-          }
-          else
-          {
-            if($scope.ticket1.price == null && $scope.ticket2.price == null){
-              $window.alert("Vui lòng chọn vé đi và vé về!");
+        var vars = [],
+            hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = decodeURIComponent(hash[1]);
+        }
+
+        String.prototype.replaceAll = function(str1, str2, ignore) {
+            return this.replace(new RegExp(str1.replace(/([\/\,\!\\\^\$\{\}\[\]\(\)\.\*\+\?\|\<\>\-\&])/g, "\\$&"), (ignore ? "gi" : "g")), (typeof(str2) == "string") ? str2.replace(/\$/g, "$$$$") : str2);
+        }
+
+        var depart = vars['tu'].replaceAll("+", " ");
+        depart = depart.replace("+-+", " - ");
+        var arrive = vars['den'].replaceAll("+", " ");
+        arrive = arrive.replace("+-+", " - ");
+
+        $scope.Params = {
+            depart: depart,
+            arrive: arrive,
+            date: parseInt(vars['ngay']),
+            returnday: parseInt(vars['ngayve']),
+            adult: parseInt(vars['nguoilon']),
+            child: parseInt(vars['treem'])
+        };
+
+
+        $http({
+            method: 'GET',
+            url: 'http://flightbooking01.mycloud.by/api/flights?' +
+                'depart=' + vars['tu'].split("+-+")[1] + '&arrive=' + vars['den'].split("+-+")[1] +
+                '&time=' + vars['ngay'] + '&adult=' + vars['nguoilon'] + '&child=' + vars['treem']
+        }).then(function successCallback(response) {
+            var flights = response.data.flights;
+
+            $scope.Depart_flights = [];
+            for (var i = 0; i < flights.length; i++)
+                for (var j = 0; j < flights[i].flex.length; j++) {
+                    $scope.Depart_flights.push({
+                        flightId: flights[i].flightId,
+                        time: new Date(flights[i].time).toLocaleTimeString().slice(0, 5),
+                        timeLong: flights[i].time,
+                        grade: flights[i].flex[j].grade,
+                        number: flights[i].flex[j].number,
+                        price: flights[i].flex[j].price
+                    });
+                }
+            $scope.dep_flight = $scope.Depart_flights[0];
+
+        }, function errorCallback(response) {
+
+        });
+
+
+        if ($scope.Params.returndate != '#') {
+            $http({
+                method: 'GET',
+                url: 'http://flightbooking01.mycloud.by/api/flights?' +
+                    'depart=' + vars['den'].split("+-+")[1] + '&arrive=' + vars['tu'].split("+-+")[1] +
+                    '&time=' + vars['ngayve'] + '&adult=' + vars['nguoilon'] + '&child=' + vars['treem']
+            }).then(function successCallback(response) {
+                var flights = response.data.flights;
+
+                $scope.Arrive_flights = [];
+                for (var i = 0; i < flights.length; i++)
+                    for (var j = 0; j < flights[i].flex.length; j++) {
+                        $scope.Arrive_flights.push({
+                            flightId: flights[i].flightId,
+                            time: new Date(flights[i].time).toLocaleTimeString().slice(0, 5),
+                            timeLong: flights[i].time,
+                            grade: flights[i].flex[j].grade,
+                            number: flights[i].flex[j].number,
+                            price: flights[i].flex[j].price
+                        });
+                    }
+                $scope.arr_flight = $scope.Arrive_flights[0];
+
+            }, function errorCallback(response) {
+
+            });
+        }
+
+
+        $http({
+                method: "POST",
+                url: 'http://flightbooking01.mycloud.by/api/booking'
+            })
+            .then(function successCallback(response) {
+                $scope.BookingId = response.data.bookingId;
+
+            }, function errorCallback(response) {
+
+            });
+
+        $scope.setFlight = function() {
+            var index = document.querySelector("input[name='chooseTicketA']:checked").value;
+            $scope.dep_flight = $scope.Depart_flights[index];
+
+            if ($scope.Params.returndate != '#') {
+                index = document.querySelector("input[name='chooseTicketB']:checked").value;
+                $scope.arr_flight = $scope.Arrive_flights[index];
             }
-            else if($scope.ticket1.price){
-              $window.alert("Vui lòng chọn vé đi!");
+        }
+
+        $scope.addFlight = function() {
+            var dep_flight = $scope.dep_flight;
+
+            $http({
+                    method: 'POST',
+                    url: 'http://flightbooking01.mycloud.by/api/flight_detail/' + $scope.BookingId + '/flight',
+                    data: {
+                        flightId: dep_flight.flightId,
+                        time: dep_flight.timeLong,
+                        grade: dep_flight.grade,
+                        price: dep_flight.price
+                    }
+                })
+                .then(function successCallback(response) {
+                    $window.location.href = 'page3.html?tu=' + $scope.Params.depart + '&den=' + $scope.Params.arrive +
+                        '&ngay=' + $scope.Params.date + '&nguoilon=' + $scope.Params.adult + '&treem=' + $scope.Params.child +
+                        '&madatcho=' + $scope.BookingId;
+                }, function errorCallback(response) {
+                    alert(response.status)
+
+                });
+
+            if ($scope.Params.returndate != '#') {
+                var arr_flight = $scope.arr_flight;
+
+                $http({
+                        method: 'POST',
+                        url: 'http://flightbooking01.mycloud.by/api/flight_detail/' + $scope.BookingId + '/flight',
+                        data: {
+                            flightId: arr_flight.flightId,
+                            time: arr_flight.timeLong,
+                            grade: arr_flight.grade,
+                            price: arr_flight.price
+                        }
+                    })
+                    .then(function successCallback(response) {
+                        $window.location.href = 'page3.html?tu=' + $scope.Params.depart + '&den=' + $scope.Params.arrive +
+                            '&ngay=' + $scope.Params.date + '&ngayve=' + $scope.Params.returndate + '&nguoilon=' + $scope.Params.adult + '&treem=' + $scope.Params.child +
+                            '&madatcho=' + $scope.BookingId;
+                    }, function errorCallback(response) {
+                        alert(response.status)
+
+                    });
             }
-            else if($scope.ticket2.price){
-              $window.alert("Vui lòng chọn vé về!");
-            }
-            
-          }
-        };        
-    }]);
+
+        };
+    });
     </script>
 </body>
 
