--- a/Source/Client/Web/flightBooking/page3.html
+++ b/Source/Client/Web/flightBooking/page3.html
@@ -20,183 +20,158 @@
     <script src="js/animation.js" type="text/javascript" charset="utf-8" async defer></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-</head>
-
-<body>
-    <div class="container">
-        <div class="table-reponsive" id="wrap">
-            <div class="review">
-                <h4 class="head-title1">Chuyến bay Chiều đi</h4>
-                <table class="table table-condensed table-striped table-hover">
-                    <tbody>
-                        <tr>
-                            <td>
-                                Từ <b>TP Hồ Chí Minh</b>(SGN)
-                            </td>
-                            <td>
-                                Đến <b>Hà Nội</b>(HAN)
-                            </td>
-                            <td>
-                                Flight <b>VN201</b>(HAN)
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Thời gian khởi hành: <strong>17:50</strong> 25/10/2016</td>
-                            <td>Thời gian hạ cánh: <strong>19:55</strong> 25/10/2016</td>
-                            <td>
-                                Tổng thời gian bay: <strong>2 giờ 5 phút</strong>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h4 class="head-title1" style="font-size: 15px;">Chi tiết Giá</h4>
-                <table class="table table-condensed table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Số lượng</th>
-                            <th>Hành khách</th>
-                            <th>Giá</td>
-                            <th>Thuế &amp; Phí</th>
-                            <th>Tổng cộng</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Người lớn</td>
-                            <td><span class="currency">599.000 VNĐ</span></td>
-                            <td><span class="currency">359.900 VNĐ</span></td>
-                            <td><span class="currency">958.900 VNĐ</span></td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>Em bé</td>
-                            <td><span class="currency">0 VNĐ</span></td>
-                            <td><span class="currency">130.000 VNĐ</span></td>
-                            <td><span class="currency">130.000 VNĐ</span></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h5 class="total"><b>Tổng cộng: </b>&nbsp;<strong><span class="currency">1.088.900 VNĐ</span></strong></h5>
-
-                <h4 class="head-title1">Chuyến bay Chiều về</h4>
-                <table class="table table-condensed table-striped table-hover">
-                    <tbody>
-                        <tr>
-                            <td>
-                                Từ <b>Hà Nội</b>(HAN)
-                            </td>
-                            <td>
-                                Đến <b>TP Hồ Chí Minh</b>(SGN)
-                            </td>
-                            <td>
-                                Flight <b>VN201</b>(HAN)
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Thời gian khởi hành: <strong>06:00</strong> 26/10/2016</td>
-                            <td>Thời gian hạ cánh: <strong>08:05</strong> 26/10/2016</td>
-                            <td>
-                                Tổng thời gian bay: <strong>2 giờ 5 phút</strong></span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <h4 class="head-title1" style="font-size: 15px;">Chi tiết Giá</h4>
-                <div class="table-reponsive">
-                  <table class="table table-condensed table-striped table-hover">
-                      <thead>
-                          <tr>
-                              <th>Số lượng</th>
-                              <th>Hành khách</th>
-                              <th>Giá</td>
-                              <th>Thuế &amp; Phí</th>
-                              <th>Tổng cộng</th>
-                          </tr>
-                      </thead>
-                      <tbody>
-                          <tr>
-                              <td>1</td>
-                              <td>Người lớn</td>
-                              <td><span class="currency">599.000 VNĐ</span></td>
-                              <td><span class="currency">359.900 VNĐ</span></td>
-                              <td><span class="currency">958.900 VNĐ</span></td>
-                          </tr>
-                          <tr>
-                              <td>1</td>
-                              <td>Em bé</td>
-                              <td><span class="currency">0 VNĐ</span></td>
-                              <td><span class="currency">130.000 VNĐ</span></td>
-                              <td><span class="currency">130.000 VNĐ</span></td>
-                          </tr>
-                      </tbody>
-                  </table>
-                </div>
-                <h5 class="total"><b>Tổng cộng: </b>&nbsp;<strong><span class="currency">1.088.900 VNĐ</span></strong></h5>
-
-                <h4 class="head-title1">Thông tin Khách hàng</h4>
-                <ul class="customer-info">
-                    <li><span>Họ &amp; Tên: </span> Nguyen Van A </li>
-                    <li><span>Điện thoại: </span>01685144668</li>
-                    <li><span>Email: </span>abc@gmail.com</li>
-                </ul>
-                <h4 class="head-title1">Thông tin Hành khách</h4>
-                <table class="table table-bordered table-hover">
-                      <tbody>
-                          <tr>
-                              <td>Người lớn 1</td>
-                              <td>Nguyen van A</td>
-                          </tr>
-                         <tr>
-                              <td>Người lớn 2</td>
-                              <td>Nguyen van B</td>
-                          </tr>
-                      </tbody>
-                </table>
-                <table class="table table-bordered table-hover">
-                      <tbody>
-                          <tr>
-                              <td>Em bé 1</td>
-                              <td>Nguyen Van C</td>
-                          </tr>
-                          <tr>
-                              <td>Em bé 2</td>
-                              <td>Nguyen Van D</td>
-                          </tr>
-                      </tbody>
-                </table>
-                <h3 class="total-price">GIÁ VÉ: <span class="currency">2.177.800 VNĐ</span> <br>
- <!--                  <div style="font-size: 16px; padding-top: 9px; color: tomato;">Phí xuất vé: <span class="currency">0 VNĐ</span></div> -->
-                </h3>
-                
-                    <div class="text-center">
-                        <!--   <input type="hidden" name="payment_method" value="1" /> -->
-                        <div class="clear"></div>
-                        <img style="margin-top: 8px; margin-left: 168px;" src="css/images/arrow1.gif">
-                        <button class="common-button2" type="submit">XÁC NHẬN THÔNG TIN &amp; ĐẶT VÉ</button>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                    </div>
-                    <div id="submitFlight" class="fixed">
-                        <span class="moreScroll">KÉO XUỐNG ĐỂ HOÀN THÀNH ĐẶT VÉ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img style="margin-top: -16px;" src="css/images/arrow-down.gif"></span>
-                    </div>
-                    <style>
-                    #submitFlight.fixed {
-                        border: 1px dashed rgb(237, 27, 36);
-                    }
-                    </style>
-                </form>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </div>
-
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/angular.min.js" type="text/javascript"></script>
+</head>
 
+<body ng-app="bookFlightPassenger" ng-controller="bookFlightPassenger">
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ITUS Airlane</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="./index.html">Home</a></li>
+                        <!--             <li><a href="#about">About</a></li> -->
+                    </ul>
+                    <!--           <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Username</a></li>
+              </ul> -->
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </header>
+    <!-- /header -->
+    <div class="container" id="wrap">
+        <h3>Thông tin hành khách: </h3>
+        <form id="validatorEnabledForm" class="form-horizontal" role="form" data-toggle="validator">
+            <h4>Người lớn: </h4>
+            <div class="adult-guest" ng-repeat="n in [].constructor(Params.adult) track by $index">
+                <div class="form-group">
+                    <label class="col-sm-3" for="adults" style="text-align: center;">Hành khách {{ $index + 1 }} (*)</label>
+                    <div class="col-sm-3">
+                        <input name="passenger" style="text-align:center" pattern="^[a-zA-Z\s]+$" maxlength="30" class="form-control" id="numberGuest" type="text" placeholder="Họ và tên" required>
+                    </div>
+                </div>
+            </div>
+            <h4>Trẻ em: </h4>
+            <div class="children-guest" ng-repeat="n in [].constructor(Params.child) track by $index">
+                <div class="form-group">
+                    <label class="col-sm-3" for="adults" style="text-align: center;">Hành khách {{ $index + 1 }} (*)</label>
+                    <div class="col-sm-3">
+                        <input name="passenger" style="text-align:center" pattern="^[a-zA-Z\s]+$" maxlength="30" class="form-control" id="numberGuest" type="text" placeholder="Họ và tên" required>
+                    </div>
+                </div>
+            </div>
     </div>
+    <div class="form-group col-sm-offset-3">
+        <!--           <div class="col-sm-offset-3 col-sm-5" style="text-align:center;"> -->
+        <div class="col-sm-offset-2 col-sm-3" style="text-align:center;">
+            <button style="width:100px;" type="submit" class="btn btn-primary" name="submit" ng-click="addPassenger()">
+                <i class="fa fa-hand-o-right" aria-hidden="true"></i> Tiếp tục</button>
+        </div>
+    </div>
+    </form>
+    </div>
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h3><span>ITUS</span>Airlane</h3>
+            <p class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+            </p>
+            <p class="footer-company-name">Company Name &copy; 2016</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>207 Nguyen Van Cu Street</span> District 5, Ho chi Minh City</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+84 1685 144 667</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:leduci1595@gmail.com">leduci1595@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>The best company ever
+            </p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script type="text/javascript">
+    var app = angular.module('bookFlightPassenger', []);
+    app.controller('bookFlightPassenger', function($scope, $http, $window) {
+        var vars = [],
+            hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = decodeURIComponent(hash[1]);
+        }
+
+        String.prototype.replaceAll = function(str1, str2, ignore) {
+            return this.replace(new RegExp(str1.replace(/([\/\,\!\\\^\$\{\}\[\]\(\)\.\*\+\?\|\<\>\-\&])/g, "\\$&"), (ignore ? "gi" : "g")), (typeof(str2) == "string") ? str2.replace(/\$/g, "$$$$") : str2);
+        }
+
+        var depart = vars['tu'].replaceAll("%20", " ");
+        var arrive = vars['den'].replaceAll("%20", " ");
+
+        $scope.Params = {
+            depart: depart,
+            arrive: arrive,
+            date: parseInt(vars['ngay']),
+            returndate: parseInt(vars['ngayve']),
+            adult: parseInt(vars['nguoilon']),
+            child: parseInt(vars['treem']),
+            bookingId: vars['madatcho']
+        };
+
+        $scope.addPassenger = function() {
+            var passengers = [];
+            var passenger = document.getElementsByName("passenger");
+            for (var i = 0; i < passenger.length; i++)
+                passengers.push(passenger[i].value);
+
+
+
+            $http({
+                    method: "POST",
+                    url: 'http://flightbooking01.mycloud.by/api/flight_detail/' + $scope.Params.bookingId + '/passenger',
+                    data: {
+                        passengers: passengers
+                    }
+                })
+                .then(function successCallback(response) {
+                    $window.location.href = 'page4.html?tu=' + $scope.Params.depart + '&den=' + $scope.Params.arrive +
+                        '&ngay=' + $scope.Params.date + '&ngayve=' + $scope.Params.returndate + '&nguoilon=' + $scope.Params.adult + '&treem=' + $scope.Params.child +
+                        '&madatcho=' + $scope.Params.bookingId;
+
+                }, function errorCallback(response) {
+
+                });
+        };
+    });
+    </script>
 </body>
 
 </html>
