--- a/Source/Client/Web/flightBooking/page4.html
+++ b/Source/Client/Web/flightBooking/page4.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>BinBoss Airline</title>
-
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="font/font-icon/font-awesome/css/font-awesome.css">
@@ -16,102 +16,281 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-      <link rel="stylesheet" type="text/css" href="css/styles.css">
-      <script src="js/animation.js" type="text/javascript" charset="utf-8" async defer></script>
-
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="js/animation.js" type="text/javascript" charset="utf-8" async defer></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/angular.min.js" type="text/javascript"></script>
+</head>
+
+<body ng-app="bookFlightConfirm" ng-controller="bookFlightConfirm">
+    <header>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ITUS Airlane</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="./index.html">Home</a></li>
+                        <!--             <li><a href="#about">About</a></li> -->
+                    </ul>
+                    <!--           <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Username</a></li>
+              </ul> -->
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </header>
+    <!-- /header -->
+    <div class="container">
+        <div class="table-reponsive" id="wrap">
+            <div class="review">
+                <h4 class="head-title1">Chuyến bay Chiều đi</h4>
+                <table class="table table-condensed table-striped table-hover">
+                    <tbody>
+                        <tr>
+                            <td>
+                                Từ <b>{{ Params.depart }}</b>
+                            </td>
+                            <td>
+                                Đến <b>{{ Params.arrive }}</b>
+                            </td>
+                            <td>
+                                Chuyến bay <b>{{ Flights[0].flightId }}</b>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Ngày bay: <strong>{{Flights[0].time.date}}</strong></td>
+                            <td>Giờ bay: <strong>{{Flights[0].time.hour}}</strong> </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div style="visibility: {{$scope.Params.returndate != '#' ? 'visible' : 'hidden'}}">
+                    <h4 class="head-title1">Chuyến bay Chiều về</h4>
+                    <table class="table table-condensed table-striped table-hover">
+                        <tbody>
+                            <tr>
+                                <td>
+                                    Từ <b>{{ Params.arrive }}</b>
+                                </td>
+                                <td>
+                                    Đến <b>{{ Params.depart }}</b>
+                                </td>
+                                <td>
+                                    Chuyến bay <b>{{ Flights[1].flightId }}</b>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Ngày bay: <strong>{{Flights[1].time.date}}</strong></td>
+                                <td>Giờ bay: <strong>{{Flights[1].time.hour}}</strong> </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <h4 class="head-title1">Thông tin Hành khách</h4>
+                <table class="table table-bordered table-hover" id="table-guest">
+                    <tbody>
+                        <tr ng-repeat="passenger in Passengers track by $index">
+                            <td>Hành khách {{$index + 1}}</td>
+                            <td>{{ passenger }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h3 class="total-price">GIÁ VÉ: <span class="currency">{{ TotalCost }} VNĐ</span> <br>
+ <!--                  <div style="font-size: 16px; padding-top: 9px; color: tomato;">Phí xuất vé: <span class="currency">0 VNĐ</span></div> -->
+                </h3>
+                <div class="text-center">
+                    <!--   <input type="hidden" name="payment_method" value="1" /> -->
+                    <div class="clear"></div>
+                    <img style="margin-top: 8px; margin-left: 168px;" src="css/images/arrow1.gif">
+                    <button class="common-button2" type="submit" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">XÁC NHẬN THÔNG TIN &amp; ĐẶT VÉ</button>
+                    <!--Change -->
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </div>
+                <div id="submitFlight" class="fixed">
+                    <span class="moreScroll">KÉO XUỐNG ĐỂ HOÀN THÀNH ĐẶT VÉ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img style="margin-top: -16px;" src="css/images/arrow-down.gif"></span>
+                </div>
+                <style>
+                #submitFlight.fixed {
+                    border: 1px dashed rgb(237, 27, 36);
+                }
+                </style>
+                </form>
+            </div>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel" style="text-transform: uppercase;">Nhập thẻ thanh toán</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">Tên chủ tài khoản:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">Số tài khoản:</label>
+                            <input class="form-control" id="message-text"></input>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+                    <button type="button" class="btn btn-primary" ng-click="pay()">Xác nhận tài khoản</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer-distributed">
+        <div class="footer-left">
+            <h3><span>ITUS</span>Airlane</h3>
+            <p class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">Contact</a>
+            </p>
+            <p class="footer-company-name">Company Name &copy; 2016</p>
+        </div>
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>207 Nguyen Van Cu Street</span> District 5, Ho chi Minh City</p>
+            </div>
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>+84 1685 144 667</p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:leduci1595@gmail.com">leduci1595@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span>The best company ever
+            </p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
-  <div class="container">
-    <h4>Thông tin khách hàng</h2>
-    <form id="validatorEnabledForm" class="form-horizontal" role="form" data-toggle="validator">
-        <div class="adult-guest">
-          <div class="form-group">
-            <label class="col-sm-3" for="adults" style="text-align: center;">Người lớn <b> 1 </b>(*)</label>
-            <div class="col-sm-2">
-              <select class="form-control col-sm-2" id="adults">
-                <option>Nam</option>
-                <option>Nữ</option>
-              </select>
-            </div>
-            <div class="col-sm-3">
-              <input style="text-align:center" pattern="^[a-zA-Z\s]+$" maxlength="30" class="form-control" id="numberGuest" type="text" placeholder="Họ và tên" required>
-            </div>
-          </div>
+    <script>
+    $('#exampleModal').on('show.bs.modal', function(event) {
+                var button = $(event.relatedTarget); // Button that triggered the modal
+                var recipient = button.data('whatever'); // Extract info from data-* attributes
+                // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+                // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+                var modal = $(this);
+                modal.find('.modal-title').text('New message to ' + recipient);
+                modal.find('.modal-body input').val(recipient);
+    </script>
+    })
+    </div>
+    <script type="text/javascript">
+    var app = angular.module('bookFlightConfirm', []);
+    app.controller('bookFlightConfirm', function($scope, $http, $window) {
 
-          <div class="form-group">
-            <label class="col-sm-3" for="adults" style="text-align: center;">Người lớn <b> 2 </b>(*)</label>
-            <div class="col-sm-2">
-            <select class="form-control col-sm-2" id="adults">
-              <option>Nam</option>
-              <option>Nữ</option>
-            </select>
-          </div>
-          <div class="col-sm-3">
-            <input style="text-align:center" pattern="^[a-zA-Z\s]+$" maxlength="30" class="form-control" id="numberGuest" type="text" placeholder="Họ và tên" required>
-          </div>
-        </div>
-      </div>
-        <div class="children-guest">
-          <div class="form-group">
-            <label class="col-sm-3" for="adults" style="text-align: center;">Trẻ em <b> 1 </b>(*)</label>
-            <div class="col-sm-2">
-              <select class="form-control col-sm-2" id="adults">
-                <option>Nam</option>
-                <option>Nữ</option>
-              </select>
-            </div>
-            <div class="col-sm-3">
-              <input style="text-align:center" pattern="^[a-zA-Z\s]+$" maxlength="30" class="form-control" id="numberGuest" type="text" placeholder="Họ và tên" required>
-            </div>
-          </div>
-        </div>
 
-        <div class="form-group">
-          <div class="col-sm-offset-3 col-sm-5" style="text-align:center;">
-            <button style="width:100px;" type="submit" class="btn btn-primary" name="submit">
-            <i class="fa fa-hand-o-right" aria-hidden="true"></i> Tiếp tục</button>
-          </div>
-        </div>
-    </form>
-    
-    <!-- <h4>2. Thông tin người liên hệ</h2>
-    <form class="form-horizontal">
-      <div class="form-group">
-        <label class="control-lable col-sm-3" style="text-align: center;">Name(*)</label>
-        <div class="col-sm-5">
-            <input class="form-control" id="nameInput" type="text" placeholder="Enter name">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-lable" style="text-align: center;">Phone(*)</label>
-        <div class="col-sm-5">
-            <input class="form-control" id="phoneInput" type="text" placeholder="Enter phone number">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-lable" style="text-align: center;">Email(*)</label>
-        <div class="col-sm-5">
-            <input class="form-control" id="emailInput" type="text" placeholder="Enter email">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-lable" style="text-align: center;">Address(*)</label>
-        <div class="col-sm-5">
-            <input class="form-control" id="addressInput" type="text" placeholder="Enter address">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-5" style="text-align:center;">
-          <button style="width:100px;" type="submit" class="btn btn-primary">
-          <i class="fa fa-hand-o-right" aria-hidden="true"></i> Continue</button>
-        </div>
-       </div> -->
-    </form>
+        var vars = [],
+            hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
 
-  </div>
-  </body>
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = decodeURIComponent(hash[1]);
+        }
+
+        String.prototype.replaceAll = function(str1, str2, ignore) {
+            return this.replace(new RegExp(str1.replace(/([\/\,\!\\\^\$\{\}\[\]\(\)\.\*\+\?\|\<\>\-\&])/g, "\\$&"), (ignore ? "gi" : "g")), (typeof(str2) == "string") ? str2.replace(/\$/g, "$$$$") : str2);
+        }
+
+        var depart = vars['tu'].replaceAll("%20", " ");
+        var arrive = vars['den'].replaceAll("%20", " ");
+
+        $scope.Params = {
+            depart: depart,
+            arrive: arrive,
+            date: parseInt(vars['ngay']),
+            returndate: parseInt(vars['ngayve']),
+            adult: parseInt(vars['nguoilon']),
+            child: parseInt(vars['treem']),
+            bookingId: vars['madatcho']
+        };
+
+        $http({
+                method: "GET",
+                url: 'http://flightbooking01.mycloud.by/api/flight_detail/' + $scope.Params.bookingId + '/passengers'
+
+            })
+            .then(function successCallback(response) {
+                $scope.Passengers = response.data.passengers;
+
+                $http({
+                        method: "GET",
+                        url: 'http://flightbooking01.mycloud.by/api/flight_detail/' + $scope.Params.bookingId + '/flights'
+
+                    })
+                    .then(function successCallback(response) {
+                        $scope.Flights = response.data.flights;
+                        $scope.TotalCost = 0;
+                        for (var i = 0; i < $scope.Flights.length; i++) {
+                            var time = $scope.Flights[i].time;
+                            $scope.Flights[i].time = {
+                                hour: new Date(time).toLocaleString().slice(0, 5),
+                                date: new Date(time).toLocaleString().slice(10, new Date(time).toLocaleString().length)
+                            }
+                            $scope.TotalCost += $scope.Passengers.length * $scope.Flights[i].price;
+                        }
+                    }, function errorCallback(response) {
+
+                    });
+
+            }, function errorCallback(response) {
+
+            });
+
+
+
+
+        $scope.pay = function() {
+            $http({
+                    method: "PUT",
+                    url: 'http://flightbooking01.mycloud.by/api/booking/' + $scope.Params.bookingId
+                })
+                .then(function successCallback(response) {
+                    $window.location.href = 'page5.html?tu=' + $scope.Params.depart + '&den=' + $scope.Params.arrive +
+                        '&ngay=' + $scope.Params.date + '&ngayve=' + $scope.Params.returndate + '&nguoilon=' + $scope.Params.adult + '&treem=' + $scope.Params.child +
+                        '&madatcho=' + $scope.Params.bookingId;
+
+                }, function errorCallback(response) {
+
+                });
+        };
+
+
+
+    });
+    </script>
+</body>
+
 </html>
